syntax = "proto3";

message SensorDataModel {
   string id = 1;
   string deviceID = 2;
   float temperature = 3;
   float humidity = 4;
   float pressure = 5;
   float uv = 6;
   double date = 7;
}

message SensorDataResult {
   repeated SensorDataModel data = 1;
}